Add cron job to fetch books, improve books frontend
